--- a/0x01-Webpack/task_2/package.json
+++ b/0x01-Webpack/task_2/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.7.3",
-    "webpack-cli": "^5.0.2"
+    "css-loader": "^5.0.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "jquery": "^3.6.4",
-    "lodash": "^4.17.21",
-    "style-loader": "^3.3.2"
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   }
 }
