--- a/0x01-Webpack/task_3/package.json
+++ b/0x01-Webpack/task_3/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "task_3",
+  "name": "task_1",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "webpack serve --mode development --open --port 8564"
+    "build": "webpack",
+    "start-dev": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "webpack-dev-server": "^4.13.3"
-  },
   "devDependencies": {
-    "css-loader": "^6.7.3",
-    "jquery": "^3.6.4",
-    "lodash": "^4.17.21",
-    "style-loader": "^3.3.2",
-    "webpack-cli": "^5.0.2"
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.1.0",
+    "image-webpack-loader": "^7.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   }
 }
