--- a/0x02-react_intro/task_4/dashboard/package.json
+++ b/0x02-react_intro/task_4/dashboard/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://cocofox1902.github.io/dashboard/"
+  "homepage": "https://cocofox1902.github.io/holberton-smiling-school-react/task_4/"
 }
